src/main/java/org/example/moviesplatform/error/model/MovieNotFoundException.java
package org.example.moviesplatform.error.model;

public class MovieNotFoundException extends RuntimeException {
    public MovieNotFoundException(String message) {
        super(message);
    }
}
